--- a/style.css
+++ b/style.css
@@ -12,22 +12,23 @@ body{
 .thread-head {
    display: grid;
    margin: 0;
-   padding: 0.1em 0.1em 0.1em
-   grid-template-columns: auto auto;
+   padding: 0.1em 0.1em 0.1em;
+   grid-template-columns: 20% auto;
    grid-template-areas:
            "topic topic"
            "starter date";
 }
 
 .starter{
-	grid-area: starter;
+   grid-area: starter;
    margin: 0 0 0 0;
    padding: 0.1em 0.1em 1em 0.1em;
-	background-color: #e0f0ff;
-	border: 0.1em solid #88bbff;
+   background-color: #e0f0ff;
+   border: 0.1em solid #88bbff;
 }
 
 .date{
+   text-align: right;
    grid-area: date;
    margin: 0 0 0 0;
    padding: 0.1em 0.1em 1em 0.1em;
@@ -47,8 +48,8 @@ body{
 .entry {
    display: grid;
    margin: 0;
-   padding: 0.1em 0.1em 0.1em
-   grid-template-columns: 10em auto;
+   padding: 0.1em 0.1em 0.1em;
+   grid-template-columns: 20% auto;
    grid-template-areas:
            "user text"
            "footer footer";
@@ -56,7 +57,7 @@ body{
 	border: 0.1em solid #88bbff;
 }
 .user{
-	grid-area: user;
+   grid-area: user;
    margin: 0 0 0 0;
    padding: 0.1em 0.1em 1em 0.1em;
 }
