--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body{
 .forum-head {
    display: grid;
    margin: 0;
-   padding: 0.1em 0.1em 0.1em;
    grid-template-columns: 20% auto;
    grid-template-areas:
            "topic topic"
@@ -82,6 +81,15 @@ header {
    width: 50%;
 }
 
+.post {
+   margin: auto;
+   width: 100%;
+}
+.messagebox {
+   grid-area: text;
+   width: 100%;
+}
+
 
 
 
@@ -104,11 +112,14 @@ header {
 .text{
    grid-area: text;
    margin: 0 0 0 0;
-   padding: 0.1em 0.1em 1em 0.1em;
+   padding: 0.6em 0.6em 1em 0.6em;
+   background-color: #ffffff;
+   height: 100%;
 }
 
 .blob {
    margin: 2em 0em 2em 0em;
+   height: 10em;
 }
 
 .author:before {
